tests/sawn/fixtures/valid/08_object_elements.sawn
// Test: Object elements in arrays including empty objects
items[]
  {}
    name="Sword"
    damage=50
    enchanted=true
  {}
  {}
    name="Potion"
    effect="heal"
    charges=3
