tests/sawn/fixtures/invalid/28_dash_marker.sawn
// INVALID: - marker (use {} for object elements)
items[]
  - name="Sword"
    damage=50
